--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,6 @@ Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 Imports:
     MASS, JMbayes, Matrix, splines, truncnorm
-License: What license is it under?
+License: MIT
 Encoding: UTF-8
 LazyData: true
