--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Maintainer: Zhenwei Yang <z.yang@erasmusmc.nl>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 Imports:
-    MASS, JMbayes, Matrix, splines, truncnorm, mathjaxr
+    MASS, Matrix, splines, truncnorm, mathjaxr
 RdMacros: mathjaxr
 License: MIT
 Encoding: UTF-8
