--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ export(icjmsim)
 exportPattern("PCaASSim")
 import(MASS)
 import(Matrix)
+import(JMabyes)
 import(splines)
 import(truncnorm)
 import(mathjaxr)
