--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@ export(icjmsim)
 exportPattern("PCaASSim")
 import(MASS)
 import(Matrix)
-import(JMabyes)
+import(JMbayes)
 import(splines)
 import(truncnorm)
 import(mathjaxr)
