Add function csdynpred
Add function to dynamically predict risk of cancer progression

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 export(icjmsim)
 export(mcicjmsim)
+export(csdypred)
 exportPattern("PCaASSim")
 import(MASS)
 import(Matrix)
@@ -7,3 +8,6 @@ import(JMbayes)
 import(splines)
 import(truncnorm)
 import(mathjaxr)
+import(devtools)
+import(rjags)
+import(mvtnorm)
