--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,11 @@ Author: Zhenwei Yang
 Maintainer: Zhenwei Yang <z.yang@erasmusmc.nl>
 Description: This is the package to simulate data of PCa patients on AS. The data are generated from the ICJM or MCICJM (with sensitivity of 0.5) fitted on the Canary PASS trial.
 Imports:
-    MASS, Matrix, JMbayes, splines, truncnorm, mathjaxr
+    MASS, Matrix, JMbayes, splines, truncnorm, mathjaxr, devtools, mvtnorm, rjags
 RdMacros: mathjaxr
 License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
+Depends: 
+    R (>= 2.10)
